# netbook

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release-binaries.yml
docs/: collections.md  curl-converter-prompt.md  design.md  history.md  plugins.md  usage.md  variables.md
examples/: .netbook.env  collection.json
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: executor.rs  interpolation.rs  mod.rs  models.rs
src/io/: collection.rs  discovery.rs  history.rs  mod.rs  variables.rs
src/plugins/: example.rs  mod.rs  traits.rs
src/tui/: app.rs  events.rs  mod.rs  state.rs
src/ui/: components.rs  layouts.rs  mod.rs  renderer.rs
