[package]
name = "netbook"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# Regex for variable interpolation
regex = "1.0"

# File system utilities
directories = "5.0"

# Error handling
color-eyre = "0.6"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
