[package]
name = "netbook"
version = "0.2.6"
edition = "2024"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
description = "A lightweight TUI request collection manager and runner - a Postman alternative for the terminal"
license = "GPL-3.0"
repository = "https://github.com/jonaylor89/netbook"
homepage = "https://github.com/jonaylor89/netbook"
documentation = "https://docs.rs/netbook"
readme = "README.md"
keywords = ["tui", "http", "rest", "api", "testing"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
exclude = [
    "netbook_requests.log",
    ".netbook/",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ratatui = "0.29"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
regex = "1.0"
directories = "6.0"
color-eyre = "0.6"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
